# pp-fee-updater

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  updater.rs
