[package]
name = "pp-fee-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
url = "2.0"

starknet = "0.16.0"
starknet-types-core = { version = "0.1.8", default-features = false, features = [
    "hash",
    "curve",
] }

